<resources>
    <string name="app_name">Ppaps</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_history">Riwayat</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="signup">SIGN UP</string>
    <string name="signin_bold">SIGN IN</string>
    <string name="login_name">Nama</string>
    <string name="login_email">Email</string>
    <string name="login_username">Username</string>
    <string name="login_hp">No. Hp</string>
    <string name="login_pw">Password</string>
    <string name="nama_hint">Masukkan nama</string>
    <string name="email_hint">Masukkan alamat email</string>
    <string name="username_hint">Masukkan username</string>
    <string name="hp_hint">Masukkan nomor telepon</string>
    <string name="pw_hint">Masukkan password</string>
    <string name="signin_help">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="remember_pass">Remember me</string>
    <string name="forgot_pass">Lupa password?</string>
    <string name="password_8">Password tidak boleh kurang dari 8 karakter</string>

    <string name="face_verif">Verifikasi Wajah</string>
    <string name="cam_text">Posisikan wajah anda</string>
    <string name="welcome">Selamat Datang "username"</string>
    <string name="emergency">DARURAT</string>
    <string name="order">PESAN</string>
    <string name="hp_cs">No. HP yang akan dihubungi</string>
    <string name="emergency_hold">Tekan Tombol Emergency Selama 3 Detik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nama_jalan">Jalan Universitas Jember, \n Jember 65473</string>
    <string name="kami_sedang_menghubungi_anda">Kami sedang menghubungi anda</string>
    <string name="panggilan_darurat_terkonfirmasi">Panggilan Darurat Terkonfirmasi</string>
    <string name="kami_akan_segera_menuju_ke_lokasi_pastikan_alamat_yang_kamu_berikan_jelas">Kami akan segera menuju ke lokasi, pastikan alamat yang kamu berikan jelas</string>
    <string name="register_success">Registrasi Berhasil</string>
    <string name="register_failed">Registrasi Gagal</string>
    <string name="verification_success">Verifikasi Berhasil</string>
    <string name="verification_failed">Verifikasi Gagal, Coba Lagi</string>

    <string name="pesan_ambulance">Pesan Ambulance</string>
    <string name="alamat">Alamat</string>
    <string name="hint_alamat">Masukan alamat tujuan</string>
    <string name="tanggal">Tanggal</string>
    <string name="hint_teks_panjang">Jelaskan keperluan anda</string>
    <string name="keperluan">Keperluan</string>
    <string name="pesan">Pesan</string>
    <string name="date">Tanggal</string>
    <string name="masukan_tanggal_pesan">Masukan tanggal pesan</string>
    <string name="pesanan_berhasil">Pesanan Berhasil</string>
    <string name="tanggal_pesan">Sampai Jumpa di tanggal \n 21-12-2023 ya!</string>
    <string name="riwayat_pemesanan_ambulance">Riwayat Pemesanan Ambulance</string>
    <string name="username">Shana Shannon</string>
    <string name="email">shana08@gmail.com</string>
    <string name="phone_number">081547659891</string>
    <string name="address">Jl. Setiabudi, Kota Jember</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>

    <string name="perkiraan_sampai_12_34_pm">Perkiraan Sampai: 12:34 PM</string>
    <string name="status_pesanan_terkonfirmasi">Status: Pesanan Terkonfirmasi</string>
    <string name="plat_mobil_abc_123">Plat Mobil: ABC 123</string>
    <string name="driver_budi_haryadi">Driver : Budi Haryadi</string>
    <string name="hospital_name">Nama Rumah Sakit</string>
    <string name="order_date">Tanggal Pemesanan</string>
    <string name="order_status">Status Pemesanan</string>
    <string name="old_pass">Password Lama</string>
    <string name="new_pass">Password Baru</string>
    <string name="new_pass_con">Konfirmasi Password Baru</string>
    <string name="renew_pass">Perbarui Password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_pass_hint">Masukkan Password Lama</string>
    <string name="new_pass_hint">Masukkan Password Baru</string>
</resources>
