<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ambulanceIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ambulance" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hospitalNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/hospital_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bookingDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/order_date"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/bookingStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/order_status"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
